@@ -1,43 +1,0 @@
-CC = gcc
-LD = gcc
-
-CPPFLAGS = -g -Wall `gtk-config --cflags` -I . -I .. -DHAVE_CONFIG_H=1
-LDDFLAGS = -g -Wall `gtk-config --libs`
-
-ifdef DEBUG
-	CPPFLAGS := $(CPPFLAGS) -DDEBUG
-endif
-
-OBJFILES = md5.o crypt.o libyahoo2.o yahoo_connections.o yahoo_httplib.o yahoo_list.o yahoo_util.o sample_client.o
-PROGNAME = yahoo
-
-all: $(PROGNAME)
-
-.c.o:
-	$(CC) -c $(CPPFLAGS) $<
-
-$(PROGNAME): $(OBJFILES)
-	$(LD) -o $@ $(LDDFLAGS) $^
-
-install: $(PROGNAME)
-	$(INSTALL) $(PROGNAME) $(INSTALLDIR)
-
-clean:
-	rm -f $(OBJFILES)
-	rm -f core
-	rm -f $(PROGNAME)
-
-libyahoo2.o: libyahoo2.c yahoo2.h md5.h yahoo_connections.h yahoo2_callbacks.h yahoo_httplib.h
-
-md5.o: md5.c md5.h
-
-crypt.o: crypt.c
-
-yahoo_connections.o: yahoo_connections.c yahoo_connections.h yahoo2.h
-
-yahoo_httplib.o: yahoo_httplib.c yahoo2.h yahoo2_callbacks.h
-
-sample_client.o: sample_client.c yahoo2.h yahoo2_callbacks.h
-
-PHONY: clean install all
-
